--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Natasha Beddow</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hi!!!!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Stourbridge, and grew up in Telford in England.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Exploring nature, drawing, badminton.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Nature Conservationist</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Edgbaston in Birmingham, England.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Programming is fun >:)</p>
     </section>
 
     <footer id="footer">
